# ChangeLog for app-emulation/fs-uae-launcher
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*fs-uae-launcher-2.1.23 (31 Jan 2013)

  31 Jan 2013; Michał Ziąbkowski <mziab@o2.pl>
  +fs-uae-launcher-2.1.23.ebuild:
  Bumped.

*fs-uae-launcher-2.1.9 (24 Jan 2013)

  24 Jan 2013; Michał Ziąbkowski <mziab@o2.pl> +fs-uae-launcher-2.1.9.ebuild:
  Bumped.

*fs-uae-launcher-2.0.1 (12 Jan 2013)

  12 Jan 2013; Michał Ziąbkowski <mziab@o2.pl> +fs-uae-launcher-2.0.1.ebuild,
  +metadata.xml:
  New ebuild.
