@@ -1,3 +1,4 @@
 DIST fs-uae-2.0.1.tar.gz 5948283 SHA256 23ae547cfd80e77a296529fc2323e508a1c3ef3c01852a090eded733ed613ec6 SHA512 4dc5c8a22dd1379c0e81572a2d4f7d5f5dbf1aab05754eff7cbff18d52fb650ba356ee8958749acb01491768932148862694d70ea92e804917417d2c4a6ef430 WHIRLPOOL c8adfe81f2786d404a8fa432d93ec775d781a47d02d62e8a212dd909b025044c0c9f62e198ca3a970469c3a63059a4ab9c9640e93e6607b0a9949e08bbfcd88e
 DIST fs-uae-2.1.23dev.tar.gz 6209404 SHA256 a63e65eec540b344fc05aaad4dc9889e72b5d38c364a6acb4cac4b515e464d64 SHA512 be7fe6b0550e77e95b7fcf3f8ccd93be84a9db0da2b21f7eec0bba0e12938984154b059c3c687c95ffc5b7215763376f599991ea2e42d67025e613b3c2e11676 WHIRLPOOL 0dd5165db9204b87584b39d6cd74c2238d55b40b71353e9945f3c1857aea4502e2faeabe86eda9da365c0e0f765c1ea83610944c843797c331cb261675275c56
+DIST fs-uae-2.1.27dev.tar.gz 6395024 SHA256 ed265d3541ae29bdcf18a6fbe1552681f25e6a1e9ca1e374afd7012f88bdb940 SHA512 e151f6e7293c98fe9f2cf38404717157dcd244dbd03ed8e2980eb3858c041e611aa02463a038b2c7b07c2e6466a8ed38e644ce160b7d48c7d489804a95ea8c7a WHIRLPOOL c61790e516e0dc7bef45b6086d78b1064706a91a615f8ab0f27250ee6b27cda119bff504b2f524dbaf6dee903c4b7cd538bbddc9bb1222cbb1bf06f2eff3da6a
 DIST fs-uae-2.1.9dev.tar.gz 6137266 SHA256 ec9cffcb6ecb4a74ec58704eafc9d224a51bf63a1401d7deaa6d478fe4da7bc7 SHA512 5b2203936507d71068f7a752ea67a0e5b81cce1cf8842eafb5f281ff4e975823d2986ae865480266031da2beb599fc7bb535c16440aaa3f523f364e22d920bf7 WHIRLPOOL 8289fe197a505818badc717ee6a4aeba3d4356db2578b1d3d71211c161200d94feb09b9c952cfa3e7259b2372d2784c11f4939c6f91f68d79a78344b32d19f35
