@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*fs-uae-launcher-2.1.27 (14 Feb 2013)
+
+  14 Feb 2013; Michał Ziąbkowski <mziab@o2.pl>
+  +fs-uae-launcher-2.1.27.ebuild:
+  Bumped.
+
 *fs-uae-launcher-2.1.23 (31 Jan 2013)
 
   31 Jan 2013; Michał Ziąbkowski <mziab@o2.pl>
